:ambulance: Fixing errors on IE preventing app to load

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -120,3 +120,8 @@ body {
   text-align: right;
   position: relative;
 }
+
+// brand image IE fix
+.navbar-item img {
+  height: 100%;
+}
